syntax = "proto3";

package prod.products.v1;

option go_package = "production_service/gen/go/prod/products/v1;pb_prod_products";

message Product {
  // Identifier
  string id = 1;
  // Name
  string name = 2;
  // Description
  string description = 3;
  // Image ID
  string image_id = 4;
  // Price
  string price = 5;
  // Prince Currency
  uint32 currency_id = 6;
  // Rating
  uint32 rating = 7;
  // Category ID
  string category_id = 8;
  // Specification
  string specification = 9;
  // Updated at
  int64 updated_at = 10;
  // Create at
  int64 created_at = 11;
}